[package]
name = "kryolite_smart_contract"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "A sample project with wasm-pack"
license = "MIT/Apache-2.0"
repository = "https://github.com/yourgithubusername/hello-wasm"

[lib]
crate-type = ["rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0.152", default-features = false, features = ["derive"] }
serde_json = "1.0.93"
kryolite-macro = { path = "kryolite-macro" }
lazy_static = "1.4.0"
wee_alloc = "0.4.5"
bigint = "4.4.3"
hashes = "0.1.9"
bs58 = "0.4.0"

[profile.release]
lto = true
opt-level = 's'
