[package]
name = "kryolite-lottery"
version = "0.0.1"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "A sample project with wasm-pack"
license = "MIT/Apache-2.0"
repository = "https://github.com/yourgithubusername/hello-wasm"

[lib]
crate-type = ["cdylib"]

[dependencies]
kryolite_smart_contract = { path = "../../" }
serde = { version = "1.0.152", default-features = false, features = ["derive"] }

[profile.release]
lto = true
opt-level = 's'
